Mon Aug 23 13:09:27 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* backport r29071 from ruby_1_8;

	  * ext/openssl/ossl_asn1.c (obj_to_asn1bool): fixed ASN1::Boolean
	    encoding issue for OpenSSL 1.0.0 compatibility.
	    ASN1::Boolean.new(false).to_der wrongly generated "\1\1\377" which
	    means 'true'.

	    ASN1_TYPE_set of OpenSSL <= 0.9.8 treats value 0x100 as 'false'
	    but OpenSSL >= 1.0.0 treats it as 'true'.  ruby-ossl was using
	    0x100 for 'false' for backward compatibility.  Just use 0x0 for
	    the case OpenSSL >= OpenSSL 0.9.7.

	  * test/openssl/test_asn1.rb: test added.

Mon Aug 23 22:30:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (version.o): depends on both of version.h and
	  include/ruby/version.h.   [ruby-dev:42063]

Mon Aug 23 12:28:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_search): fix: 4th argument should be regexp
	  object. patched by shintaro kuwamoto [ruby-dev:41667] #3459

Mon Aug 23 02:23:05 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_strtod): make sure to have digit-sequence after 'p'
	  for hexadecimal-floating-constant. [ruby-dev:42105]

Sun Aug 22 09:08:02 2010  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h (UINT2NUM): fix ifdef condition for LLP64.
	  reported by Daniel Gutmanas.  [ruby-core:31778]

Sun Aug 22 05:55:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: fix typo.  a patch from Eric Wong at
	  [ruby-core:31810].

Thu Aug 19 12:04:39 2010  Kenta Murata  <mrkn@mrkn.jp>

	* array.c (rb_ary_permutation, rb_ary_repeated_permutation,
	  rb_ary_repeated_combination, rb_ary_product):
	  use ary_make_shared_copy instead of ary_make_substitution.
	  [ruby-dev:42067] [Bug #3708]

	* test/ruby/test_array.rb (test_product, test_repeated_permutation,
	  test_repeated_combination): append assertions against [Bug #3708].

Thu Aug 19 11:11:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enum.c (enum_inject): fix typo of rdoc.